welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:9: error: ';' expected but 'if' found.
  } if (y-10 < c) {
    ^